<resources>
    <string name="app_name">TodoList</string>
    <string name="add_task">Add Task</string>
    <string name="task">Task</string>
    <string name="done">Done</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="hour">Time</string>
    <string name="see">SEE</string>
    <string name="edit">Edit</string>
    <string-array name="categories_array">
        <item>Urgent</item>
        <item>Normal</item>
    </string-array>
    <string-array name="active_array">
        <item>Active</item>
        <item>Archived</item>
    </string-array>
</resources>
