<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/task_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="11dp"
        android:onClick="onClickItem"
        android:text="@string/task"
        android:textSize="20sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button_done"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/button_see"
        android:layout_alignBottom="@+id/button_see"
        android:layout_alignParentEnd="true"
        android:onClick="onClickDone"
        android:text="@string/done"
        android:textAlignment="center"
        tools:ignore="RelativeOverlap,RtlHardcoded" />

    <Button
        android:id="@+id/button_see"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/button_done"
        android:text="@string/see"
        android:textAlignment="center"
        android:onClick="onClickItem"
        android:textColorLink="@color/colorPrimary" />

</RelativeLayout>