<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.list.todo.todolist.CreateTaskActivity">

    <EditText
        android:id="@+id/name_task"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:ems="15"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="37dp" />

    <Spinner
        android:id="@+id/category_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/name_task"
        android:layout_marginTop="27dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="124dp" />

    <EditText
        android:id="@+id/hour_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/date_task"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:ems="10"
        android:hint="@string/hour"
        android:onClick="onClickHour"
        android:inputType="none"
        android:focusable="false" />

    <EditText
        android:id="@+id/date_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/hour_task"
        android:layout_centerVertical="true"
        android:ems="10"
        android:inputType="none"
        android:focusable="false"
        android:onClick="onClickDate"
        android:hint="@string/date" />

    <EditText
        android:id="@+id/description_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/date_task"
        android:layout_marginTop="33dp"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/create_task"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/description_task"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="27dp"
        android:text="@string/add" />

</RelativeLayout>
